--- a/lifelink/pubspec.yaml
+++ b/lifelink/pubspec.yaml
@@ -30,10 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.1.0
-  cloud_firestore: 
-  firebase_storage: 
-  firebase_auth: 
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.2.0
+  cloud_firestore: ^4.4.0
+  provider: ^6.1.0
+  firebase_storage_web: ^3.6.6
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
